[package]
name = "yoylib"
version = "0.0.1"
edition = "2024"
authors = ["Yorik Jzhmotik"]
description = "Easy-to-use library to make rust simpler."
repository = "https://github.com/jorikisntreal/yoylib"
readme = "README.md"
license = "The Unlicense"
license-file = "LICENSE.txt"

[dependencies]

[package.metadata.scripts]
yoy_buildr = "cargo build --release"
yoy_buildd = "cargo build"
yoy_check = "cargo check"
yoy_clip = "cargo clippy"
yoy_publish = "cargo publish"

[badges]
maintenance = { status = "experimental" }